--- a/config/config.json
+++ b/config/config.json
@@ -5,7 +5,8 @@
             "business_proposal_pay": "You are about to pay $${business_proposal_cost} are you OK with that?",
             "ok": "OK",
             "cancel": "Cancel",
-            "business_proposal_poor_no_money": "You are poor you can't afford $${business_proposal_cost}"
+            "business_proposal_poor_no_money": "You are poor you can't afford $${business_proposal_cost}",
+            "no_document":"No document found"
         }
     },
     "businessProposalPrice": 20000,
